# ffmpegCodeRecord

./: AVFilterDemo.cpp  AV_DIR_DEMO.cpp  AudioDecodeToGetPCM.cpp  CMakeLists.txt  Demo.cpp  FFMpegInformationLog.cpp  MediaInformationLog.cpp  PlayAudioBySDL2.cpp  PlayVideoBySDL2.cpp  PlayYUVBySDL2.cpp  SaveFrameToImage.cpp  VideoAndAudioMuxer.cpp  VideoDeMuxer.cpp  VideoDeMuxerSimple.cpp  VideoDecodeToGetYUV.cpp  VideoReMuxer.cpp  YUVEncodeAndMuxer.cpp  YUVEncodeToH264.cpp  YUVEncodeToH264Pure.cpp  YUVToImage.cpp  audioPlay.cpp  decoderDemo.cpp  demo.cpp  demo2.cpp  main.cpp  simplest_ffmpeg_player.cpp  yuvplay.cpp
libswscale/: swscale.h
sdlDemo/: SDLYUV.cpp  SDL_DEMO1.cpp
